--- a/templates/Acknowledgement.html
+++ b/templates/Acknowledgement.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <p>File uploaded successfully</p>
-    <p>File Name: {{name}}</p>
-    <a href="/download/{{pointCloudName}}" download>
+    <p>File Name: {{ name }}</p>
+
+    <a href="{{ url_for('download', pointCloudName=pointCloudName) }}" download>
       Download
     </a>
+
     <div class="frame">
-    {% include 'pc.html' %}
+      {{ pc_html | safe }}
     </div>
   </body>
 </html>
